--- a/test/html/image-set.html
+++ b/test/html/image-set.html
@@ -1,5 +1,8 @@
 <style>
   body {
-    background-image: -webkit-image-set(url(../image/blue.png) 1x, url(../image/blue.png) 2x);
+    background-image: -webkit-image-set(
+      url(../image/blue.png) 1x,
+      url(../image/blue.png) 2x
+    );
   }
 </style>
