--- a/test/html/pseudo_element.html
+++ b/test/html/pseudo_element.html
@@ -4,7 +4,8 @@
     height: 100%;
     width: 100%;
   }
-  body::before, body::after {
+  body::before,
+  body::after {
     background-image: url(../image/blue.png);
     content: '';
     position: absolute;
