--- a/src/viewer/index.html
+++ b/src/viewer/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Viewer - View Background Image</title>
+    <title>View Background Image</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="main.js"></script>
+    <script defer src="main.js"></script>
   </head>
   <body>
-    <div id="list"></div>
+    <div id="gallery"></div>
+    <div id="error"></div>
   </body>
 </html>
