--- a/src/viewer/index.html
+++ b/src/viewer/index.html
@@ -7,6 +7,7 @@
     <script defer src="main.js"></script>
   </head>
   <body>
+    <h1>View Background Image</h1>
     <div id="gallery"></div>
     <div id="error"></div>
   </body>
