--- a/src/viewer/index.html
+++ b/src/viewer/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <title>View Background Image</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src="utils.js"></script>
+    <script defer src="cache.js"></script>
+    <script defer src="view.js"></script>
     <script defer src="main.js"></script>
   </head>
   <body>
