--- a/src/viewer/index.html
+++ b/src/viewer/index.html
@@ -13,5 +13,21 @@
     <h1>View Background Image</h1>
     <div id="gallery"></div>
     <div id="error"></div>
+    <nav>
+      <a
+        href="https://github.com/foooomio/view-background-image"
+        target="_blank"
+        id="review"
+      >
+        <div>☆ Review</div>
+      </a>
+      <a
+        href="https://foooomio.net/extensions/donation.html"
+        target="_blank"
+        id="donation"
+      >
+        <div>♡ Donation</div>
+      </a>
+    </nav>
   </body>
 </html>
