--- a/src/viewer/index.html
+++ b/src/viewer/index.html
@@ -2,23 +2,41 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>View Background Image</title>
+    <title></title>
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="main.js"></script>
   </head>
   <body>
-    <h1 id="h1">View Background Image</h1>
+    <h1 id="h1"></h1>
+
     <div id="gallery"></div>
-    <div id="error" class="hidden"></div>
+
+    <div id="error" class="hidden">
+      <h2 id="error-message"></h2>
+      <ul>
+        <li id="error-reload"></li>
+        <li id="error-security"></li>
+      </ul>
+      <p id="error-details"></p>
+      <p>
+        <a
+          href="https://github.com/foooomio/view-background-image/issues"
+          target="_blank"
+        >
+          <span id="error-report"></span>
+        </a>
+      </p>
+    </div>
+
     <nav>
       <a
         href="https://foooomio.net/extensions/view-background-image/"
         target="_blank"
       >
-        <div id="feedback">☆ Feedback</div>
+        <div id="feedback"></div>
       </a>
       <a href="https://foooomio.net/extensions/donation.html" target="_blank">
-        <div id="donation">♡ Donation</div>
+        <div id="donation"></div>
       </a>
     </nav>
   </body>
