--- a/src/viewer/index.html
+++ b/src/viewer/index.html
@@ -9,10 +9,22 @@
   <body>
     <h1 id="h1"></h1>
 
+    <nav id="nav">
+      <a
+        href="https://foooomio.net/extensions/view-background-image/"
+        target="_blank"
+      >
+        <div id="feedback"></div>
+      </a>
+      <a href="https://foooomio.net/extensions/donation.html" target="_blank">
+        <div id="donation"></div>
+      </a>
+    </nav>
+
     <div id="gallery"></div>
 
     <div id="error" class="hidden">
-      <h2 id="error-message"></h2>
+      <h1 id="error-message"></h1>
       <ul>
         <li id="error-reload"></li>
         <li id="error-security"></li>
@@ -27,17 +39,5 @@
         </a>
       </p>
     </div>
-
-    <nav>
-      <a
-        href="https://foooomio.net/extensions/view-background-image/"
-        target="_blank"
-      >
-        <div id="feedback"></div>
-      </a>
-      <a href="https://foooomio.net/extensions/donation.html" target="_blank">
-        <div id="donation"></div>
-      </a>
-    </nav>
   </body>
 </html>
