--- a/src/viewer/index.html
+++ b/src/viewer/index.html
@@ -14,7 +14,7 @@
         href="https://foooomio.net/extensions/view-background-image/"
         target="_blank"
       >
-        <div id="feedback"></div>
+        <div id="review"></div>
       </a>
       <a href="https://foooomio.net/extensions/donation.html" target="_blank">
         <div id="donation"></div>
