--- a/tests/html/image-set.html
+++ b/tests/html/image-set.html
@@ -1,6 +1,6 @@
 <style>
   body {
-    background-image: -webkit-image-set(
+    background-image: image-set(
       url(../image/blue.png) 1x,
       url(../image/blue.png) 2x
     );
