--- a/tests/html/pseudo_content.html
+++ b/tests/html/pseudo_content.html
@@ -4,7 +4,8 @@
     height: 100%;
     width: 100%;
   }
-  body::before, body::after {
+  body::before,
+  body::after {
     content: url(../image/blue.png);
     position: absolute;
     height: 100%;
