Add Firefox warning

--- a/src/viewer/index.html
+++ b/src/viewer/index.html
@@ -28,6 +28,16 @@
       <ul>
         <li id="error-reload"></li>
         <li id="error-security"></li>
+        <li id="error-firefox" class="hidden">
+          Open about:addons and enable Permissions &gt; Access your data for all
+          websites. <br />
+          <a
+            href="https://discourse.mozilla.org/t/content-scripts-do-not-load/130009"
+            target="_blank"
+          >
+            Please see this issue for more details.
+          </a>
+        </li>
       </ul>
       <p id="error-details"></p>
       <p>
